syntax = "proto3";

package aws.aws;
option go_package = "github.com/CyberAgent/mimosa-aws/proto/aws";

/**
 * Entity
 **/

// AWS
message AWS {
  uint32 aws_id = 1;
  string name = 2;
  uint32 project_id = 3;
  string aws_account_id = 4; // 12桁のAWSアカウントID
  int64 created_at = 5;
  int64 updated_at = 6;
}

// AWSRelDataSource
message AWSRelDataSource {
  uint32 aws_id = 1;
  uint32 aws_data_source_id = 2;
  uint32 project_id = 3;
  string assume_role_arn = 4;
  string external_id = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
}

// AWSForUpsert
// (Unique keys: aws_account_id)
message AWSForUpsert {
  string name = 1;
  uint32 project_id = 2;
  string aws_account_id = 3; // 12桁のAWSアカウントID
}

// DataSource(data_sourceと紐づくaws_rel_data_sourceの状態)
message DataSource {
  uint32 aws_data_source_id = 1; // aws_data_source.aws_data_source_id
  string data_source = 2;        // aws_data_source.data_source
  float max_score = 3;           // aws_data_source.max_score

  uint32 aws_id = 4;          // aws_rel_data_source.aws_id
  uint32 project_id = 5;      // aws_rel_data_source.project_id
  string assume_role_arn = 7; // aws_rel_data_source.assume_role_arn
  string external_id = 8;     // aws_rel_data_source.external_id
}

enum Status {
  UNKOWN = 0;
  OK = 1;
  CONFIGURED = 2;
  NOT_CONFIGURED = 3;
  ERROR = 4;
}

// DataSourceForAttach
message DataSourceForAttach {
  uint32 aws_id = 1;
  uint32 aws_data_source_id = 2;
  uint32 project_id = 3;
  string assume_role_arn = 4;
  string external_id = 5; // assume_role時に指定する外部ID
  Status status = 6;
  string status_detail = 7;
  int64 scan_at = 8;
}
